<resources>
    <string name="app_name">PM-Pulse</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">User Name</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_start_test">Start Test</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_review">Review</string>
    <string name="action_mark">Marked</string>
    <string name="action_submit_exam">Submit Exam</string>
    <string name="action_review_list">Review List</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_net">It seems you are not connected to internet. Please turn on Wi-Fi or Mobile Data Connection.</string>
    <string name="error_timeout">We are unable to connect to our server. Please try again later.</string>
    <string name="error_noaudio">We are uploading new audios in this section. Please try again later.</string>
    <string name="error_logged_in">"It seems you are already logged into your account from another device or you exited the application without logging out.Do you want to reset the session to login? Please click the reset button and login again"</string>
    <string name="error_unable_to_logout">"We are unable to logout. Please try again later."</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="message_logout">Are you sure you want to logout from PM-Pulse</string>
    <string name="message_logout_a2Z">Logout from A2Z-PM?</string>

    <string name="error_playlist_already_added">Playlist is already added. Please enter a different name.</string>
    <string name="error_no_playlist_found">No playlist found. Do you want to create a new playlist?</string>
    <string name="error_chapter_already_added">This chapter is already added in playlist.</string>
    <string name="error_no_playlist">No playlist found. Please create a playlist in PM-Dhwani section.</string>
    <string name="error_no_package">No packages found.</string>
    <string name="error_no_exam_history">No exam history found.</string>
    <string name="error_blank_playlistname">Playlist field is required</string>
    <string name="error_no_chapter_added_in_playlist">No chapter added in this Playlist.  Please add chapters in playlist in PM-Dhwani section.</string>
    <string name="error_training_not_heard">It seems you have not heard this training audio. Please hear it and then provide your rating.</string>
    <string name="error_not_alpanumeric">This field must not contain any symbols</string>

    <string name="nav_audiotraining">PM-Dhwani</string>
    <string name="nav_freeaudios">Free Audios</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_take_exam">Skill\'s Test</string>
    <string name="nav_exam_history">History</string>
    <string name="nav_contactus">Contact Us</string>
    <string name="nav_a2zpm">A2Z-PM</string>

    <string name="rating0">0</string>
    <string name="rating1">1</string>
    <string name="rating2">2</string>
    <string name="rating3">3</string>
    <string name="rating4">4</string>

    <string name="welcome_message">Welcome!</string>

    <string name="rate_audio">Rate/View Audio</string>
    <string name="rate_audio_rating">Rate Audio</string>
    <string name="view_audio_rating">View Rating</string>

    <string name="play_all">Play All</string>.
    <string name="play">Play</string>

    <string name="create_playlist">Create Playlist</string>
    <string name="name_playlist">Playlist Name</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>

    <string name="notification_freeaudio">Playing Free Audios</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to existing playlist</string>
    <string name="add_to_newplaylist">Add to new playlist</string>

    <string name="rename">Rename playlist</string>
    <string name="remove">Delete playlist</string>
    <string name="view">View playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="name_of_playlist">Playlist Name</string>
    <string name="sure_delete_from_playlist">Do you want to remove this audio from playlist?</string>
    <string name="sure_delete_playlist">Do you want to delete this playlist?</string>
    <string name="main_topics">Main Topics</string>
    <string name="stop_player">Stop Training</string>

    <string name="a2z_exam_simulator">A2Z Exam Simulator</string>
    <string name="a2z_test_center">A2Z Test Center</string>

    <string name="contact_feedback">For Feedback</string>
    <string name="contact_account">For Account or Test-Related Issues or Sign-Up for New Account</string>
    <string name="contact_technical">For Technical Assistance</string>
    <string name="email_feedback">Write us : <i><u>feedback@a2zpm.com</u></i></string>
    <string name="subject_feedback">Feedback</string>
    <string name="email_admin">Write us : <i><u>admin@a2zpm.com</u></i></string>
    <string name="subject_admin">Require Assistance</string>
    <string name="dear_admin">Dear Admin,</string>
    <string name="email_technical">Write us : <i><u>ajit1919@gmail.com</u></i></string>
    <string name="subject_technical">Require Technical Assistance</string>
    <string name="body_email">Dear Team,</string>
    <string name="send_mail">Send mail...</string>
    <string name="no_emailclients">There are no email clients installed</string>
    <string name="mobile_technical">Call us : <i><u>+91-9873880750</u></i></string>

    <!--Instructions for exam-->
    <string name="topic_covered">This test will cover the following topics:</string>
    <string name="duration">Duration:</string>
    <string name="instructions">Instructions:</string>
    <string name="exam_name">Exam</string>
    <string name="total_question">Questions"</string>

    <string name="question">Question 1 of 200</string>
    <string name="time_remaining">Time Remaining : 03:15:17</string>
    <string name="question_demo">There are many variations of passages teration in some form, by injected humour, or randomise?</string>
    <string name="exam_over">Total duration of time is over. Exam is submitted.</string>
    <string name="exam_forced_finished">Due to invalid navigation, your exam has been submitted</string>
    <string name="exam_submitted">Exam has been submitted</string>
    <string name="do_you_want_to_submit_exam">Do you want to submit exam?</string>
    <string name="question_number">Question No.</string>
    <string name="selected_option">Selected Option</string>
    <string name="marked">Marked</string>
    <string name="correct_option">Correct Option</string>
    <string name="review_answer">Review Answers</string>
    <string name="answer_saved">Answer saved successfully</string>
    <string name="marked_for_review">Marked for review</string>

    <!--Exam history-->
    <string name="chapter_name"><b>Chapter Name</b></string>
    <string name="total_questions"><b>Total Questions</b></string>
    <string name="attempted"><b>Attempted</b></string>
    <string name="correct_answers"><b>Correct Answers</b></string>
    <string name="score"><b>Score(%)</b></string>

    <!--Exam result-->
    <string name="exam_result">Exam Result</string>

    <!--Package List-->
    <string name="packages">Packages</string>
    <string name="training"><b>Training</b></string>
    <string name="total_days"><b>Total Days</b></string>
    <string name="price"><b>Price</b></string>

</resources>