<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/marginTopLarge"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ic_height"
            android:src="@drawable/pmbig" />

        <TextView
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textColor="@color/colorSideBar"
            android:typeface="serif" />

        <ProgressBar
            android:id="@+id/feature_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Progress"
            android:visibility="invisible" />

        <LinearLayout
            android:paddingBottom="@dimen/fab_margin"
            android:id="@+id/feature_content"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_feature_pmfreeaudio"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonred"
                android:text="@string/nav_freeaudios"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_feature_audiotraining"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="@drawable/buttonred"
                android:text="@string/nav_audiotraining"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_feature_a2ztraining"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="@drawable/buttonred"
                android:text="@string/nav_a2zpm"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
