<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/marginStar"
    android:paddingRight="@dimen/marginStar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marginStar"
            android:layout_marginTop="@dimen/marginStar"
            android:text="@string/exam_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorButton"
            android:textStyle="bold"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/marginSmall"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/marginStar"
            android:paddingRight="@dimen/marginStar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginStar"
                android:layout_marginTop="@dimen/marginStar"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/colorButton"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginStar"
                android:layout_marginTop="@dimen/marginStar"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/time_remaining"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/colorButton"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginStar"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/marginStar"
                    android:paddingRight="@dimen/marginStar"
                    android:text="@string/question_demo"
                    android:textAppearance="?android:textAppearanceListItemSmall"
                    android:textColor="@color/colorButton"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <RadioGroup
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSmall">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintv"
                        android:text="The standard chunk of Lorem Ipsum used "
                        android:textAppearance="?android:textAppearanceListItemSmall"
                        android:textColor="@color/colorButton" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintv"
                        android:text="The standard chunk of Lorem Ipsum used "
                        android:textAppearance="?android:textAppearanceListItemSmall"
                        android:textColor="@color/colorButton" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintv"
                        android:text="The standard chunk of Lorem Ipsum used "
                        android:textAppearance="?android:textAppearanceListItemSmall"
                        android:textColor="@color/colorButton" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintv"
                        android:text="The standard chunk of Lorem Ipsum used "
                        android:textAppearance="?android:textAppearanceListItemSmall"
                        android:textColor="@color/colorButton" />

                </RadioGroup>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/buttonred"
        android:text="@string/action_next"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:typeface="serif" />
</RelativeLayout>